--- a/edit.html
+++ b/edit.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="tr">
 <head>
@@ -18,7 +17,7 @@
       padding: 20px;
       border-radius: 10px;
       border: 3px solid #2e7d32; /* Koyu yeşil kenarlık */
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
     .btn-custom {
       background-color: #2e7d32;
@@ -35,30 +34,30 @@
 <body class="bg-light">
   <div class="container mt-5">
     <h1 class="text-center header-green">Kayıt Düzenle</h1>
-    
-    
-    <form action="/edit/9" method="post" class="form-container">
+    {% set date_parts = record[1].split('/') %}
+    {% set formatted_date = date_parts[2] ~ '-' ~ date_parts[1] ~ '-' ~ date_parts[0] %}
+    <form action="/edit/{{ record[0] }}" method="post" class="form-container">
       <div class="mb-3">
         <label for="tarih" class="form-label">Tarih:</label>
-        <input type="date" name="tarih" id="tarih" value="2025-03-01" class="form-control" required>
+        <input type="date" name="tarih" id="tarih" value="{{ formatted_date }}" class="form-control" required>
       </div>
       <div class="mb-3">
         <label for="saat" class="form-label">Çalışma Saati:</label>
-        <input type="number" name="saat" id="saat" value="10" class="form-control" required>
+        <input type="number" name="saat" id="saat" value="{{ record[2] }}" class="form-control" required>
       </div>
       <div class="mb-3">
         <label for="paket" class="form-label">Paket Sayısı:</label>
-        <input type="number" name="paket" id="paket" value="10" class="form-control" required>
+        <input type="number" name="paket" id="paket" value="{{ record[3] }}" class="form-control" required>
       </div>
       <div class="mb-3">
         <label for="paket_basi_ucret" class="form-label">Paket Başı Ücret:</label>
-        <input type="number" name="paket_basi_ucret" id="paket_basi_ucret" value="60.0" class="form-control" required>
+        <input type="number" name="paket_basi_ucret" id="paket_basi_ucret" value="{{ record[4] }}" class="form-control" required>
       </div>
       <div class="mb-3">
         <label for="saatlik_ucret" class="form-label">Saatlik Ücret:</label>
-        <input type="number" name="saatlik_ucret" id="saatlik_ucret" value="100.0" class="form-control" required>
+        <input type="number" name="saatlik_ucret" id="saatlik_ucret" value="{{ record[5] }}" class="form-control" required>
       </div>
-      <button type="submit" class="btn btn-custom mt-3">Güncelle</button>
+      <button type="submit" class="btn btn-warning">Güncelle</button>
     </form>
     <div class="text-center mt-3">
       <a href="/" class="btn btn-secondary">İptal ve Ana Sayfaya Dön</a>
